[gd_scene load_steps=42 format=2]

[ext_resource path="res://Art/Lucky/Battle Scene Assets/HeartCapsule-export.png" type="Texture" id=1]
[ext_resource path="res://Resource/Font/monogram.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Main Character Sprites-export.png" type="Texture" id=3]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/HP_bar_empty.png" type="Texture" id=4]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/battle_button.png" type="Texture" id=5]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Minnie_Sprites.png" type="Texture" id=6]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Battle Scene Button Placeholder 2x.png" type="Texture" id=7]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Main Character Stat Placeholder 2x.png" type="Texture" id=8]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Battle Scene Background 2x.png" type="Texture" id=9]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Character Placeholder 2x.png" type="Texture" id=10]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Opponent Stat Placeholder 2x.png" type="Texture" id=11]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/HP_bar_progress.png" type="Texture" id=12]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/battle_button2.png" type="Texture" id=13]
[ext_resource path="res://Art/Lucky/Battle Scene Assets/Battle Scene Footer 2x.png" type="Texture" id=14]
[ext_resource path="res://Source/Battle/BattleSystem.gd" type="Script" id=15]
[ext_resource path="res://Source/Main/Button.gd" type="Script" id=16]

[sub_resource type="AtlasTexture" id=1]
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 128 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 3 )
region = Rect2( 0, 128, 96, 128 )

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ SubResource( 1 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 2 ) ],
"loop": true,
"name": "gift",
"speed": 5.0
} ]

[sub_resource type="AtlasTexture" id=12]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=13]
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=14]
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=15]
atlas = ExtResource( 1 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=16]
atlas = ExtResource( 1 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=17]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=18]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=19]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=20]
atlas = ExtResource( 1 )
region = Rect2( 288, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
atlas = ExtResource( 1 )
region = Rect2( 0, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
atlas = ExtResource( 1 )
region = Rect2( 384, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
atlas = ExtResource( 1 )
region = Rect2( 0, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
atlas = ExtResource( 1 )
region = Rect2( 96, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
atlas = ExtResource( 1 )
region = Rect2( 192, 96, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
atlas = ExtResource( 1 )
region = Rect2( 96, 192, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
atlas = ExtResource( 1 )
region = Rect2( 192, 192, 96, 96 )

[sub_resource type="SpriteFrames" id=28]
animations = [ {
"frames": [ null, SubResource( 12 ), SubResource( 13 ), SubResource( 14 ), SubResource( 15 ), SubResource( 16 ), SubResource( 16 ), SubResource( 17 ), SubResource( 18 ), SubResource( 19 ), SubResource( 20 ), SubResource( 21 ), SubResource( 22 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 20 ), SubResource( 23 ), SubResource( 23 ), SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 20 ), SubResource( 23 ), SubResource( 23 ), SubResource( 26 ), SubResource( 27 ) ],
"loop": false,
"name": "catch",
"speed": 6.0
} ]

[sub_resource type="DynamicFont" id=11]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=29]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=10]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
font_data = ExtResource( 2 )

[sub_resource type="Theme" id=9]
default_font = SubResource( 8 )

[node name="BattleScene" type="Node"]
script = ExtResource( 15 )
flirt_texts = [ "You try to Flirt. You tell her, \"I hope you know CPR, because you just took my breath away!\"", "You try to Flirt. You tell her, \"I ought to complain to Spotify for you not being named this week’s hottest single.\"", "You try to Flirt. You tell her, \"Do you happen to have a Band-Aid? ‘Cause I scraped my knees falling for you.\"", "You try to Flirt. You tell her, \"I never believed in love at first sight, but that was before I saw you.\"" ]
listen_texts = [ "You offer your ear for her." ]
humour_texts = [ "You make a joke. You tell her, \"If you were a vegetable, you’d be a ‘cute-cumber.’\"", "You make a joke. You tell her, \"Why do we tell actors to  ‘break a leg?’ Because every play has a cast.\"", "You make a joke. You tell her, \"Don’t challenge Death to a pillow fight. Unless you’re prepared for the reaper cushions.\"", "You make a joke. You tell her, \"There’s a fine line between a numerator and a denominator.\"", "You make a joke. You tell her, \"Did you hear about the first restaurant to open on the moon? It had great food, but no atmosphere.\"", "You make a joke. You tell her, \"What did one ocean say to the other ocean? Nothing, it just waved.\"", "You make a joke. You tell her, \"Do you want to hear a construction joke? Sorry, I'm still working on it.\"", "You make a joke. You tell her, \"Why should you never trust stairs? They’re always up to something.\"", "You make a joke. You tell her, \"Which bear is the most condescending? A pan-duh!\"", "You make a joke. You tell her, \"What kind of noise does a witch’s vehicle make? Brrrroooom, brrroooom.\"", "You make a joke. You tell her, \"What’s brown and sticky? A stick.\"", "You make a joke. You tell her, \"Why are elevator jokes so classic and good? They work on many levels.\"" ]
gift_texts = [ "You give her a gift and ask her to go out." ]

[node name="Background" type="Sprite" parent="."]
texture = ExtResource( 9 )
centered = false

[node name="PlayerPlace" type="Sprite" parent="."]
position = Vector2( 114, 193 )
texture = ExtResource( 10 )

[node name="PlayerStanding" type="AnimatedSprite" parent="PlayerPlace"]
position = Vector2( -34, -53 )
frames = SubResource( 3 )
animation = "idle"

[node name="EnemyPlace" type="Sprite" parent="."]
position = Vector2( 348, 108 )
texture = ExtResource( 10 )

[node name="EnemyStanding" type="Sprite" parent="EnemyPlace"]
position = Vector2( 0, -54 )
texture = ExtResource( 6 )

[node name="Capsule" type="AnimatedSprite" parent="EnemyPlace"]
position = Vector2( 0, -13 )
frames = SubResource( 28 )
animation = "catch"

[node name="Capsule2" type="Sprite" parent="EnemyPlace"]
visible = false

[node name="EnemyStatePlace" type="Sprite" parent="."]
position = Vector2( 138, 38 )
texture = ExtResource( 11 )

[node name="Name" type="Label" parent="EnemyStatePlace"]
margin_left = -90.0
margin_top = -21.0
margin_right = 72.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Electronic Girl"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyHPBar" type="TextureRect" parent="EnemyStatePlace"]
margin_left = -94.0
margin_top = 8.0
margin_right = 68.0
margin_bottom = 28.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="EnemyStatePlace/EnemyHPBar"]
margin_left = 18.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 20.0
value = 100.0
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStatePlace" type="Sprite" parent="."]
position = Vector2( 320, 158 )
texture = ExtResource( 8 )

[node name="Name" type="Label" parent="PlayerStatePlace"]
margin_left = -62.0
margin_top = -21.0
margin_right = 100.0
margin_bottom = -2.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 11 )
text = "Player"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHPBar" type="TextureRect" parent="PlayerStatePlace"]
margin_left = -66.0
margin_top = 8.0
margin_right = 96.0
margin_bottom = 28.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Progress" type="TextureProgress" parent="PlayerStatePlace/PlayerHPBar"]
margin_left = 18.0
margin_top = 6.0
margin_right = 160.0
margin_bottom = 20.0
value = 100.0
texture_progress = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Footer" type="Sprite" parent="."]
position = Vector2( 240, 232 )
texture = ExtResource( 14 )

[node name="BattleLog" type="Label" parent="Footer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -208.0
margin_top = -33.0
margin_right = -274.0
margin_bottom = -49.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 29 )
text = "Attack"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleAction" type="Control" parent="Footer"]
visible = false
margin_left = -240.0
margin_top = -39.0
margin_right = -240.0
margin_bottom = -39.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleInfo" type="Label" parent="Footer/BattleAction"]
margin_left = 28.0
margin_top = 8.0
margin_right = 251.0
margin_bottom = 70.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 10 )
text = "What will you do?"
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonPlace" type="TextureRect" parent="Footer/BattleAction"]
margin_right = 480.0
margin_bottom = 78.0
texture = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BattleButtons" type="GridContainer" parent="Footer/BattleAction"]
margin_left = 262.0
margin_top = 7.0
margin_right = 470.0
margin_bottom = 71.0
theme = SubResource( 9 )
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Flirt" type="TextureButton" parent="Footer/BattleAction/BattleButtons"]
margin_right = 102.0
margin_bottom = 30.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 13 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
pressed_space = 3.0

[node name="Texture" type="TextureRect" parent="Footer/BattleAction/BattleButtons/Flirt"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Footer/BattleAction/BattleButtons/Flirt"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Flirt"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Listen" type="TextureButton" parent="Footer/BattleAction/BattleButtons"]
margin_left = 106.0
margin_right = 208.0
margin_bottom = 30.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 13 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
pressed_space = 3.0

[node name="Texture" type="TextureRect" parent="Footer/BattleAction/BattleButtons/Listen"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Footer/BattleAction/BattleButtons/Listen"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Listen CloseLy"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Humour" type="TextureButton" parent="Footer/BattleAction/BattleButtons"]
margin_top = 34.0
margin_right = 102.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 13 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
pressed_space = 3.0

[node name="Texture" type="TextureRect" parent="Footer/BattleAction/BattleButtons/Humour"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Footer/BattleAction/BattleButtons/Humour"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Humour"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Gift" type="TextureButton" parent="Footer/BattleAction/BattleButtons"]
margin_left = 106.0
margin_top = 34.0
margin_right = 208.0
margin_bottom = 64.0
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 13 )
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}
pressed_space = 3.0

[node name="Texture" type="TextureRect" parent="Footer/BattleAction/BattleButtons/Gift"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Label" type="Label" parent="Footer/BattleAction/BattleButtons/Gift"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_bottom = -4.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Gift"
align = 1
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[connection signal="pressed" from="Footer/BattleAction/BattleButtons/Flirt" to="." method="_on_Flirt_pressed"]
[connection signal="pressed" from="Footer/BattleAction/BattleButtons/Listen" to="." method="_on_Listen_pressed"]
[connection signal="pressed" from="Footer/BattleAction/BattleButtons/Humour" to="." method="_on_Humour_pressed"]
[connection signal="pressed" from="Footer/BattleAction/BattleButtons/Gift" to="." method="_on_Gift_pressed"]
